# ACSE

./: README.md
C++ Project-Mesh System Optimisation/: CMakeLists.txt  README.md  output.csv
C++ Project-Mesh System Optimisation/MeshingCode/: DataFrame.h  Element.h  Mesh.cpp  Mesh.h  MeshMapper.cpp  MeshMapper.h  MeshVisualizer.h  Node.h  Octree.cpp  Octree.h  main.cpp
C++ Project-Mesh System Optimisation/dataset/: HowToGenerateTestDatasets.py  groundtruth.csv  source.csv  target.csv
C++ Project-Mineral Recovery Circle Optimisation/.github/workflows/: run_tests.yml
C++ Project-Soalr System Simulator/: CMakeLists.txt  LICENSE.txt  README.md
C++ Project-Soalr System Simulator/src/: AsteroidBelt.cpp  AsteroidBelt.h  CelestialBody.h  ColourMap.h  Orbit.cpp  Orbit.h  Planet.cpp  Planet.h  Star.cpp  Star.h  Universe.cpp  Universe.h  calculation.cpp  calculation.h  main.cpp
Computational Mathematics/: CM-Nov2023.ipynb
DeepLearning Project-Classifier/: README.md  acse-xz4019_DLcw2_clean.ipynb  acse-xz4019_classified_hands.csv  references.md
DeepLearning Project-GAN/: README.md  acse-xz4019_DLcw1_clean.ipynb  acse-xz4019_DLcw1_hypertune.ipynb  references.md
Machine Leaning Project-Lithology Prediction/: README.md  dsml4pe-2023-assessment.ipynb  f1_test.csv  litho_estimator.py  references.md  y_pred_notebook.csv
